resources/public/css/style.css
/* some style */

:root {
    --color-bg: beige;
    --color-sel-bg: darkcyan;
    --color-fg: #1c1c18;
    --color-alt-bg: honeydew;
    --color-symbol: maroon;
    --color-literal: slateblue;
    --color-string: teal;
    --color-keyword: blue;
    --color-client-var: darkgreen;
    --color-error: red;
}

div.quf-result {
    margin: 1em;
}

div.quf-result-tall {
    max-height: 80vh;
    overflow: scroll;
    padding: 1em;
    margin: 0;
    border: 1px dashed grey;
}

div.quf-result-collapsed {
    max-height: 10vh;
    overflow: hidden;
    padding: 1em;
    margin: 0;
    border: 1px dashed grey;
}

.quf-wide {
    max-width: 80vw;
}

.quf-width-collapsed {
    max-width: 1ch;
}

div.quf-assistant {
    position: absolute;
    z-index: 1;
    visibility: hidden;
    border: 2px solid;
    border-radius: 4px;
    background-color: var(--color-bg);
}

div.quf-candidates {
    margin: 1em;
}

div.quf-doc {
    margin: 1em;
    white-space: pre;
}

.quf-selected {
    border: 2px solid;
    border-radius: 4px;
}

p.quf-out {
    white-space: pre-wrap;
}

p.quf-err {
    color: var(--color-error);
    white-space: pre-wrap;
}

p.quf-ex {
    color: var(--color-error);
    font-weight: bold;
}

::selection {
    background-color: var(--color-sel-bg);
    color: var(--color-bg);
}

.quf-highlight {
    border: dotted 1px;
}

body {
    font-family: monospace;
    color: var(--color-fg);
    background-color: var(--color-bg);
}

.quf-composite-wrapper {
    display: flex;
}

.quf-composite-body-vector, .quf-composite-body-list, .quf-composite-body-set {
    display: flex;
    column-gap: 1ch;
    flex-wrap: wrap;
}

.quf-object {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    margin: 1em;
}

.quf-object-attr {
    max-width: 30vw;
}

.quf-map-entry {
    display: flex;
    column-gap: 1ch;
}

.quf-tag {
    display: flex;
    column-gap: 1ch;
}

span.quf-closing-paren {
    align-self: end;
}

.quf-string {
    color: var(--color-string);
}

.quf-char {
    color: var(--color-string);
}

.quf-keyword {
    color: var(--color-keyword);
}

.quf-number {
    color: var(--color-literal);
}

.quf-symbol {
    color: var(--color-symbol);
}

.quf-control {
    font-weight: bold;
}

.quf-bool {
    color: var(--color-literal);
}

.quf-client-var {
    color: var(--color-client-var);
}

.quf-sexp-mode {
    background-color: var(--color-alt-bg);
}

input:checked + div {
    display: none;
}

label {
    cursor: pointer;
}

label.quf-ellipsis {
    display: none;
}

input:checked ~ label.quf-ellipsis {
    display: inline;
}

label:checked {
    content: "+"
}

input {
    font-family: monospace;
}

div.quf-input {
    display: inline-block;
    font-family: monospace;
    padding: 0.2em;
    min-width: 80ch;
    max-width: 100%;
    white-space: break-spaces;
}

table.quf {
    border-collapse: collapse;
    border-spacing: 0px;
    border-style: none;
}

th.quf, td.quf {
    padding: 0 1ch;
    border: solid 1px;
    border-color: grey;
    overflow: hidden;
    text-overflow: ellipsis;
}

td.quf {
    border-left-style: none;
    border-bottom-style: none;
    border-top-style: none;
    border-right-style: solid;
    white-space: pre;
}

th.quf {
    border-left-style: none;
    border-bottom-style: solid;
    border-top-style: none;
    border-right-style: solid;
}

td.quf:last-child {
    border-right-style: none;
}

th.quf:last-child {
    border-right-style: none;
}

td.quf-number-cell {
    text-align: right;
}

.quf-check {
    display: none;
}

.quf-check-cell {
    border-width: 1px;
}

th.quf-check-cell {
    border-bottom-style: solid;
}

.quf-visible-checks .quf-check {
    display: block;
}

.quf-visible-checks .quf-check-cell {
    border-right-style: solid;
}

.quf-intrinsically-sized {
    object-fit: contain;
    max-height: 50vh;
    max-width: 90vw;
}

.quf-medium-sized {
    height: 50vh;
    aspect-ratio: 16 / 9;
}

.quf-tall {
    height: 75vh;
    width: 75vw;
}

.quf-container .quf-intrinsically-sized {
    max-height: 27vh;
    max-width: 27vw;
}

.quf-container .quf-medium-sized {
    width: 27vw;
    height: auto;
}

.quf-container .quf-tall {
    width: 27vw;
    height: 27vh;
}

td.quf .quf-intrinsically-sized {
    margin: 1ch;
}

td.quf .quf-tall {
    margin: 1ch;
}

.ns-dialog {
    background-color: var(--color-alt-bg);
}

.ns-dialog > select {
    background-color: var(--color-alt-bg);
}

.ns-dialog > * {
    margin: 1em;
}

button.quf {
    margin: 1em;
}

div.quf-tree div.quf-tree {
    margin-left: 2ch;
}

input.quf-tree-button {
    display: none;
}

input.quf-tree-button:checked + label:before {
    content: "-";
    display: inline-block;
    min-width: 1ch;
}

input.quf-tree-button:not(:checked) + label:before {
    content: "+";
    display: inline-block;
    min-width: 1ch;
}

span.quf-tree-button-space {
    display: inline-block;
    min-width: 1ch;
}

input.quf-tree-button:not(:checked) ~ div.quf-tree {
    display: none;
}

div.quf-tree-item {
    padding: 2px;
}

label.quf-tree-item {
    padding: 2px;
}

input.quf-tree-item {
    display: none;
}
input.quf-tree-item:checked + label {
    border: solid;
}

div.quf-tree-top {
    display: flex;
}

div.quf-tree-left {
    padding-right: 2ch;
    border-right: 1px dashed;
}


div.quf-tree-right {
    padding-left: 2ch;
}

